tests/sksl/errors/ReservedNameDvec2.glsl
### Compilation failed:

error: 1: expected an identifier, but found 'dvec2'
1 error
